--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -206,7 +206,7 @@
 </div>
 
 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-    <div style="display: flex; align-items: center; justify-content: center; font-size: 20px; text-align: center;">
+    <div style="display: flex; align-items: center; justify-content: center; font-size: 20px; text-align: center; color: var(--colorEnlace);">
         <div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
         <div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
         <div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
@@ -253,7 +253,7 @@
     [Parameter]
     public string rss { get; set; }
 
-    SqlConnection conexion = new SqlConnection();
+    private SqlConnection conexion = new SqlConnection();
 
     private List<Juegos.Juego> resultados = new List<Juegos.Juego>();
     private List<Juegos.Juego> resultadosJuegos = new List<Juegos.Juego>();
