--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -482,7 +482,7 @@ else
 {
 	<div style="max-width: 1000px; margin: auto;">
 		<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
-			<a href="/historical-lows" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastLows", "Index")</a>
+			<a href="/historical-lows" style="text-decoration: none; color: var(--colorEnlace);">@Herramientas.Idiomas.CogerCadena(idioma, "LastLows", "Index")</a>
 
 			<div class="tooltip2" style="margin-left: 20px;">
 				<i class="fa-solid fa-circle-info" style="font-size: 15px;"></i>
