--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -16,20 +16,23 @@
 	ViewData["Title"] = Model.juego.Nombre;
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	bool usuarioLogeado = false;
+	usuarioLogeado = SignInManager.IsSignedIn(User);
+
 	Usuario usuario = new Usuario();
-	List<string> juegosUsuario = new List<string>();
 
 	bool adminLogeado = false;
 
 	if (usuarioLogeado == true)
 	{
 		usuario = await UserManager.GetUserAsync(User);
-		juegosUsuario = Herramientas.Listados.Generar(usuario.SteamGames);
 
-		if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
+		if (usuario != null)
 		{
-			adminLogeado = true;
+			if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
+			{
+				adminLogeado = true;
+			}
 		}
 	}
 
@@ -79,7 +82,5 @@
 @(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new
 {
 	idioma = Model.idioma, 
-	juego = Model.juego,
-	usuarioLogeado = usuarioLogeado,
-	juegosUsuario = juegosUsuario
+	juego = Model.juego
 }))
