--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -8,11 +8,6 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<div id="cargando" style="width: 100%; display: flex; align-items: center; justify-content: center;">
-	<span class="cargando"></span>
-</div>
-
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.Server, new { 
-	idioma = Model.idioma,
-	cargando = "cargando"
+@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { 
+	idioma = Model.idioma
 }))
